# this-viz-will-kill-you

./: pyproject.toml
config/: config.yaml
notebooks/: 11022023-transcript-dataframe.ipynb  11042023-prepare-episodes.ipynb  11042023-prepare-speakers.ipynb  11042023-prepare-word-cloud.ipynb
src/: main.py
src/tvwky/elt/: podchaser.py  spotify.py  web_scraper.py
src/tvwky/shared/: project_config.py
tests/test_config/: config_empty_keys.yaml  config_missing_keys.yaml  config_valid.yaml
tests/test_tvwky/: test_project_config.py  test_spotify.py  test_web_scraper.py
